--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 django-cors-headers = "*"
-djangorestframework = "*"
+djangorestframework= "*"
+django-environ = "*"
+python-decouple = "*"
 
 [dev-packages]
 
