--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-django~=3.1.4
-djangorestframework~=3.12.2
+asgiref==3.3.1
+Django==3.1.4
+django-cors-headers==3.5.0
+django-environ==0.4.5
+djangorestframework==3.12.2
+python-decouple==3.3
+pytz==2020.4
+sqlparse==0.4.1
