--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+pipfile
+pipfile.lock
 
 # Unit test / coverage reports
 htmlcov/
