--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ asgiref = "==3.3.1"
 pytz = "==2020.4"
 sqlparse = "==0.4.1"
 coverage = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
