--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "animate.css-react": "^1.1.0",
     "axios": "^0.21.0",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
