--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==3.1.4"
 django-cors-headers = "==3.5.0"
 djangorestframework = "==3.12.2"
 django-environ = "==0.4.5"
@@ -14,6 +13,7 @@ pytz = "==2020.4"
 sqlparse = "==0.4.1"
 coverage = "*"
 djangorestframework-simplejwt = "*"
+Django = "==3.1.4"
 
 [dev-packages]
 
